# rohrkabel

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  rohrkabelConfig.cmake.in
.github/workflows/: test.arch.yml  test.fedora.yml  test.ubuntu.yml  test.yml
cmake/: FindPipeWire.cmake
examples/channels/: CMakeLists.txt  README.md  main.cpp
examples/link-app-to-mic/: CMakeLists.txt  README.md  main.cpp
examples/main-loop-threaded/: CMakeLists.txt  main.cpp
examples/mute-microphone/: CMakeLists.txt  README.md  main.cpp
examples/roundtrip/: CMakeLists.txt  README.md  main.cpp
examples/thread-loop/: CMakeLists.txt  main.cpp
examples/virtual-mic/: CMakeLists.txt  README.md  main.cpp
examples/volume/: CMakeLists.txt  README.md  main.cpp
include/: annotations.hpp  context.hpp  dict.hpp  error.hpp  global.hpp  link-factory.hpp  listener.hpp  param_info.hpp  proxy.hpp
include/client/: client.hpp  info.hpp
include/core/: core.hpp  events.hpp  info.hpp
include/device/: device.hpp  info.hpp
include/events/: events.hpp
include/factories/: factories.hpp
include/metadata/: metadata.hpp
include/node/: info.hpp  node.hpp
include/port/: info.hpp  port.hpp
include/registry/: events.hpp  registry.hpp
include/rohrkabel/: context.hpp  error.hpp  global.hpp  link_factory.hpp  listener.hpp  loop.hpp  main_loop.hpp  properties.hpp  proxy.hpp
include/rohrkabel/channel/: channel.hpp  channel.inl
include/rohrkabel/client/: client.hpp  client.inl  events.hpp  info.hpp
include/rohrkabel/core/: core.hpp  core.inl  events.hpp  info.hpp
include/rohrkabel/device/: device.hpp  device.inl  events.hpp  info.hpp
include/rohrkabel/link/: events.hpp  info.hpp  link.hpp  link.inl
include/rohrkabel/loop/: loop.hpp  main.hpp  main.inl  thread.hpp
include/rohrkabel/metadata/: events.hpp  metadata.hpp  metadata.inl  property.hpp
include/rohrkabel/module/: info.hpp
include/rohrkabel/module/impl/: events.hpp  module.hpp  module.inl
include/rohrkabel/node/: events.hpp  info.hpp  node.hpp  node.inl
include/rohrkabel/port/: events.hpp  info.hpp  port.hpp  port.inl
include/rohrkabel/proxy/: events.hpp  proxy.hpp  proxy.inl
include/rohrkabel/registry/: events.hpp  registry.hpp  registry.inl
include/rohrkabel/spa/: dict.hpp  hook.hpp  param.hpp
include/rohrkabel/spa/pod/: builder.hpp  object.hpp  pod.hpp  pod.inl  prop.hpp
include/rohrkabel/spa/pod/object/: body.hpp  iterator.hpp  object.hpp
include/rohrkabel/utils/: annotations.hpp  assert.hpp  check.hpp  deleter.hpp  enum.hpp  lazy.hpp  lazy.inl  listener.hpp  res.hpp  task.hpp  traits.hpp
include/rohrkabel/utils/events/: events.hpp  events.inl
include/rohrkabel/utils/factories/: factories.hpp
include/rohrkabel/utils/proxy/: proxy.hpp  proxy.inl
include/spa/pod/: prop.hpp
include/spa/pod/object/: body.hpp  iterator.hpp
include/utils/: type_indentity.hpp
include/utils/events/: events.hpp
include/utils/factories/: factories.inl
src/: assert.cpp  channel.cpp  check.cpp  client.cpp  context.cpp  core.cpp  core.events.cpp  device.cpp  dict.cpp  error.cpp  global.cpp  hook.cpp  link-factory.cpp  link.cpp  link_factory.cpp  listener.cpp  loop.cpp  loop.main.cpp  loop.thread.cpp  main_loop.cpp  metadata.cpp  metadata.events.cpp  node.cpp  port.cpp  properties.cpp  proxy.cpp  proxy.events.cpp  registry.cpp  registry.events.cpp  spa.dict.cpp  spa.pod.cpp  spa.pod.object.body.cpp  spa.pod.object.iterator.cpp  spa.pod.prop.cpp
src/events/: client.events.cpp  core.events.cpp  device.events.cpp  link.events.cpp  metadata.events.cpp  node.events.cpp  port.events.cpp  proxy.events.cpp  registry.events.cpp
src/impl/: module.impl.cpp
src/impl/events/: module.impl.events.cpp
src/info/: client.info.cpp  core.info.cpp  device.info.cpp  link.info.cpp  module.info.cpp  node.info.cpp  port.info.cpp
src/spa/: spa.hook.cpp  spa.param.cpp  spa.pod.builder.cpp  spa.pod.cpp  spa.pod.object.body.cpp  spa.pod.object.cpp  spa.pod.object.iterator.cpp  spa.pod.prop.cpp
